tests/generated/050_floatformat.out
Fatal error: Call to undefined method DtlIter::floatformat() in /home/rune/workspace/php-misc/php-dtl-iterator/tests/django-generated/050_floatformat.php on line 4